tests/miz/fail/parser/fail_parser_export_missing_semicolon_001.miz
export std.core
theorem T: thesis;
